# HarjoitusRepo

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: main.yml
connectfour/: .coveragerc  .pylintrc  main.py  pyproject.toml
connectfour/game/: board.py  connect4.py  connect4vanha.py  minimax.py  player.py
connectfour/tests/: test_board.py  test_connect4.py  test_connectfour.py  test_player.py
dokumentaatiokansio/: kaytto-ohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
