[tool.poetry]
name = "harjoitusrepo"
version = "0.1.0"
description = ""
authors = ["Ada Rautiainen <ada.rautiainen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"
coverage = "^7.3.2"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
