[tool.poetry]
name = "connectfour"
version = "0.1.0"
description = ""
authors = ["Ada Rautiainen <ada.rautiainen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
coverage = "^7.3.2"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
